Adding iree_hal_amdgpu_system_t to manage HSA/topology/pools. (#21043)
The system is shared across all physical devices within a logical device
and owns resources shared across them (it's how we avoid a cycle between
logical<->physical device impls).

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -46,8 +46,8 @@ iree_runtime_cc_library(
         # "semaphore.h",
         # "semaphore_pool.c",
         # "semaphore_pool.h",
-        # "system.c",
-        # "system.h",
+        "system.c",
+        "system.h",
         # "trace_buffer.c",
         # "trace_buffer.h",
     ],
