Adding skeleton AMDGPU buffer handle and handle pool. (#21044)
The driver will implement two buffer types to start (or more?):
`iree_hal_amdgpu_external_buffer_t` and
`iree_hal_amdgpu_transient_buffer_t`. The external buffer will be used
for imported buffers and synchronous allocations (probably), while the
transient buffer is used for all asynchronous allocations. The transient
buffer maintains a reference to a device-accessible
`iree_hal_amdgpu_device_allocation_handle_t` that stores the allocated
pointer. The device-side allocator will update the handle as it
allocates/deallocates and anyone resolving buffer pointers (e.g.
`iree_hal_amdgpu_device_buffer_ref_resolve`) fetches the current pointer
from the handle. The pointer is only valid between alloca/dealloca ops
(which will set/reset the pointer).

`iree_hal_amdgpu_device_buffer_ref_t` is a variant that allows binding
tables and command buffer ops to reference typed buffers. Most code can
dereference device pointers (synchronously allocated buffers, imported
buffers, etc) and the transient buffer handles. Command buffers can
reference binding table slots with a relative offset/length.
`iree_hal_amdgpu_device_workgroup_count_buffer_ref_t` is a special case
for indirect dispatches (where the length is always known) as it packs
better into space-constrained structs.

A simple `iree_hal_amdgpu_buffer_pool_t` handles both the host
`iree_hal_buffer_t` instances and device allocation handles. The device
allocation handles can be stored in device memory to avoid additional
bus traffic on each dereference. In the steady state of invocations with
alloca/dealloca the pool should remove all host/device allocations.

--- a/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
@@ -16,6 +16,10 @@ iree_cc_library(
   HDRS
     "api.h"
   SRCS
+    "buffer.c"
+    "buffer.h"
+    "buffer_pool.c"
+    "buffer_pool.h"
     "channel.c"
     "channel.h"
     "driver.c"
@@ -50,6 +54,53 @@ iree_cc_library(
     iree::schemas::amdgpu_executable_def_c_fbs
     iree::schemas::executable_debug_info_c_fbs
   PUBLIC
+)
+
+iree_cc_library(
+  NAME
+    headers
+  HDRS
+    "buffer.h"
+    "buffer_pool.h"
+    "channel.h"
+    "driver.h"
+    "event.h"
+    "executable.h"
+    "executable_cache.h"
+    "logical_device.h"
+    "physical_device.h"
+    "system.h"
+  DEPS
+    iree::base
+    iree::base::internal
+    iree::base::internal::arena
+    iree::hal
+    iree::hal::drivers::amdgpu::device::binaries
+    iree::hal::drivers::amdgpu::device::headers
+    iree::hal::drivers::amdgpu::util
+    iree::hal::drivers::amdgpu::util::libhsa
+    iree::hal::drivers::amdgpu::util::topology
+  PUBLIC
+)
+
+iree_cc_test(
+  NAME
+    buffer_pool_test
+  SRCS
+    "buffer_pool_test.cc"
+  DEPS
+    ::amdgpu
+    ::headers
+    iree::base
+    iree::hal::drivers::amdgpu::device::headers
+    iree::hal::drivers::amdgpu::util
+    iree::hal::drivers::amdgpu::util::libhsa
+    iree::hal::drivers::amdgpu::util::topology
+    iree::testing::gtest
+    iree::testing::gtest_main
+  LABELS
+    "driver=amdgpu"
+    "nodocker"
 )
 
 ### BAZEL_TO_CMAKE_PRESERVES_ALL_CONTENT_BELOW_THIS_LINE ###
