--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -4,7 +4,7 @@
 # See https://llvm.org/LICENSE.txt for license information.
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-load("//build_tools/bazel:build_defs.oss.bzl", "iree_runtime_cc_library")
+load("//build_tools/bazel:build_defs.oss.bzl", "iree_runtime_cc_library", "iree_runtime_cc_test")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -18,10 +18,10 @@ iree_runtime_cc_library(
     srcs = [
         # "allocator.c",
         # "allocator.h",
-        # "buffer.c",
-        # "buffer.h",
-        # "buffer_pool.c",
-        # "buffer_pool.h",
+        "buffer.c",
+        "buffer.h",
+        "buffer_pool.c",
+        "buffer_pool.h",
         "channel.c",
         "channel.h",
         # "command_buffer.c",
@@ -71,5 +71,61 @@ iree_runtime_cc_library(
         "//runtime/src/iree/hal/utils:resource_set",
         "//runtime/src/iree/schemas:amdgpu_executable_def_c_fbs",
         "//runtime/src/iree/schemas:executable_debug_info_c_fbs",
+    ],
+)
+
+# Provided for tests and tools that may reach in.
+# These headers are not part of the public API and should not be depended on.
+iree_runtime_cc_library(
+    name = "headers",
+    hdrs = [
+        # "allocator.h",
+        "buffer.h",
+        "buffer_pool.h",
+        "channel.h",
+        # "command_buffer.h",
+        "driver.h",
+        "event.h",
+        "executable.h",
+        "executable_cache.h",
+        # "host_worker.h",
+        "logical_device.h",
+        "physical_device.h",
+        # "queue.h",
+        # "semaphore.h",
+        # "semaphore_pool.h",
+        "system.h",
+        # "trace_buffer.h",
+    ],
+    deps = [
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/base/internal",
+        "//runtime/src/iree/base/internal:arena",
+        "//runtime/src/iree/hal",
+        "//runtime/src/iree/hal/drivers/amdgpu/device:binaries",
+        "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
+        "//runtime/src/iree/hal/drivers/amdgpu/util",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
+    ],
+)
+
+iree_runtime_cc_test(
+    name = "buffer_pool_test",
+    srcs = ["buffer_pool_test.cc"],
+    tags = [
+        "driver=amdgpu",
+        "nodocker",
+    ],
+    deps = [
+        ":amdgpu",
+        ":headers",
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
+        "//runtime/src/iree/hal/drivers/amdgpu/util",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
     ],
 )
