Adding skeleton AMDGPU allocator. (#21093)
This doesn't do anything but is enough to satisfy build requirements of
future PRs.

This was reviewed as #21045 but incorrectly merged. This PR just merges
again on main now that the base commits have landed.

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -16,8 +16,8 @@ package(
 iree_runtime_cc_library(
     name = "amdgpu",
     srcs = [
-        # "allocator.c",
-        # "allocator.h",
+        "allocator.c",
+        "allocator.h",
         "buffer.c",
         "buffer.h",
         "buffer_pool.c",
@@ -79,7 +79,7 @@ iree_runtime_cc_library(
 iree_runtime_cc_library(
     name = "headers",
     hdrs = [
-        # "allocator.h",
+        "allocator.h",
         "buffer.h",
         "buffer_pool.h",
         "channel.h",
