[Codegen] Generalize iree_gpu.multi_mma to iree_codegen.inner_tiled (#21062)
In order to implement support for block-scaled MMA and to enable future
operations over other "inner tiled" operations (for example, hand-rolled
CPU micro-kernels), generalize iree_gpu.multi_mma to
iree_codegen.inner_tiled.

This PR is the next stage of the changes begun in #21000

The main differences between iree_gpu.multi_mma and
iree_codegen.inner_tiled are that:
1. inner_tiled takes an arbitrary number of inputs and accumulator
outputs/inits, with the INnerTileDescAttrInterface describing the
expected number of arguments. The inits are named "outputs" following
the `linalg.generic` convention.
2. The permutations - when present - are now stored as an
array-of-arrays, and not as one array for each argument (since there are
no longer fixed "lhs", "rhs", and "acc" arguments).
3. The operation takes an InnerTileDescAttrInterface implement instead
of a MmaInterfaceAttr, though checking for the old interface is still
sometimes used to scope patterns down to just multi-mma-like operations.
4. We use linalg.iterator_type<> instead of iree_gpu.iterator_type<>,
since trying to define iree_codegen.iterator_type<> was causing
redefinition errors

In terms of transformations, this PR generalizes (and, as a consequence,
renames) those transformations that had clear generalizations to
arbitrary intrinsics. This means that the configuration logic / lowering
to multi-MMA is unaffeced, but a lot of the internal transformations
(such as vectorization or tiling) have been reworked to support N
inputs.

These changes have not required more than mechanical (changing name +
assembly format) changes to any tests and never showed end-to-end
correctness issues, so it's likely that this PR causes no change in the
generated code.

To provide a motivating example for the generalization
```mlir
iree_codegen.inner_tiled ins(%lhs, %lhs_scale, %rhs, %rhs_scale) acc(%acc) {
  indexing_maps = [
    affine_map<(i, j, k) 

--- a/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR/BUILD.bazel
@@ -39,9 +39,12 @@ iree_td_library(
         "//compiler/src/iree/compiler/Codegen/Interfaces:td_files",
         "@llvm-project//mlir:DestinationStyleOpInterfaceTdFiles",
         "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
+        "@llvm-project//mlir:LinalgOpsTdFiles",
         "@llvm-project//mlir:OpBaseTdFiles",
         "@llvm-project//mlir:SCFTdFiles",
         "@llvm-project//mlir:SideEffectInterfacesTdFiles",
+        "@llvm-project//mlir:TilingInterfaceTdFiles",
+        "@llvm-project//mlir:VectorInterfacesTdFiles",
         "@llvm-project//mlir:ViewLikeInterfaceTdFiles",
     ],
 )
@@ -55,6 +58,7 @@ iree_compiler_cc_library(
         "IREECodegenLibraryManager.cpp",
         "IREECodegenOps.cpp",
         "IREECodegenTypes.cpp",
+        "TilingInterfaceImpl.cpp",
         "UKernelOps.cpp",
     ],
     hdrs = [
@@ -103,12 +107,16 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:FunctionInterfaces",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:InferTypeOpInterface",
+        "@llvm-project//mlir:LinalgDialect",
         "@llvm-project//mlir:MemRefDialect",
         "@llvm-project//mlir:Parser",
         "@llvm-project//mlir:SCFDialect",
         "@llvm-project//mlir:Support",
+        "@llvm-project//mlir:TensorDialect",
+        "@llvm-project//mlir:TilingInterface",
         "@llvm-project//mlir:TransformDialect",
         "@llvm-project//mlir:TransformDialectTransforms",
+        "@llvm-project//mlir:VectorInterfaces",
         "@llvm-project//mlir:ViewLikeInterface",
     ],
 )
