--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
@@ -39,8 +39,6 @@ iree_td_library(
         "@llvm-project//mlir:OpBaseTdFiles",
         "@llvm-project//mlir:SCFTdFiles",
         "@llvm-project//mlir:SideEffectInterfacesTdFiles",
-        "@llvm-project//mlir:TilingInterfaceTdFiles",
-        "@llvm-project//mlir:VectorInterfacesTdFiles",
     ],
 )
 
@@ -54,7 +52,6 @@ iree_compiler_cc_library(
         "IREEGPUDialect.cpp",
         "IREEGPUInterfaces.cpp",
         "IREEGPUOps.cpp",
-        "TilingInterfaceImpl.cpp",
     ],
     hdrs = [
         "DerivedConfigUtils.h",
@@ -107,9 +104,7 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:SideEffectInterfaces",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
-        "@llvm-project//mlir:TilingInterface",
         "@llvm-project//mlir:VectorDialect",
-        "@llvm-project//mlir:VectorInterfaces",
     ],
 )
 
@@ -182,7 +177,10 @@ iree_gentbl_cc_library(
     ],
     tblgen = "@llvm-project//mlir:mlir-tblgen",
     td_file = "IREEGPUInterfaces.td",
-    deps = [":td_files"],
+    deps = [
+        ":td_files",
+        "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:LoweringConfigInterfaceGen",
+    ],
 )
 
 iree_gentbl_cc_library(
