--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/BUILD.bazel
@@ -20,6 +20,7 @@ iree_lit_test_suite(
         [
             "canonicalize.mlir",
             "iree_gpu_attrs.mlir",
+            "iree_gpu_inner_tiled_ops.mlir",
             "iree_gpu_ops.mlir",
             "target_attrs.mlir",
         ],
