--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/test/CMakeLists.txt
@@ -16,6 +16,7 @@ iree_lit_test_suite(
   SRCS
     "canonicalize.mlir"
     "iree_gpu_attrs.mlir"
+    "iree_gpu_inner_tiled_ops.mlir"
     "iree_gpu_ops.mlir"
     "target_attrs.mlir"
   TOOLS
