--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
@@ -20,7 +20,7 @@ iree_lit_test_suite(
         [
             "combine_barrier_regions.mlir",
             "concretize_mma_shapes.mlir",
-            "distribute_mma_to_lanes.mlir",
+            "distribute_inner_tiled_to_lanes.mlir",
         ],
         include = ["*.mlir"],
     ),
