[LLVMGPU] Add relayout combination behind a flag (#21076)
Adds the `BufferizeDispatchTensorLoadStorePass` and the
`GPUCombineLayoutTransformationPass` to the LLVMGPU configuration
pipeline behind a new test flag,
`iree-llvmgpu-test-combine-layout-transformation`. Also adds a pipeline
test for the new configuration path.

This will allow for enabling e2e tests for the map_scatter op, and some
more complex data tiling fusions, while work for supporting map_scatter
on the LLVMGPUVectorDistribute pipeline is in progress. Once the
`LLVMGPUVectorDistribute` supports map_scatter, and the
`LLVMGPUWarpReduction` pipeline is deprecated, then the flag can be
flipped on by default.

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/test/BUILD.bazel
@@ -38,6 +38,7 @@ iree_lit_test_suite(
             "gpu_set_num_workgroups.mlir",
             "gpu_pipeline_data_tiling.mlir",
             "gpu_pipeline_generalize_named_ops.mlir",
+            "gpu_pipeline_relayout_ops.mlir",
             "horizontal_fusion_pipeline.mlir",
             "link_executables.mlir",
             "nvvm_extract_address_computation.mlir",
