[Encoding][LLVMGPU] Add encoding fusion e2e test (#21088)
Adds a new data tiling encoding e2e test for a dispatch containing
`unset_encoding -> elementwise -> set_encoding`. This uses the
`iree-llvmgpu-test-combine-layout-transformation` test flag, and tests
the ability for the LLVMGPU backend to handle the fusion case that
arises when there are chained data-tiled matmuls.

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/tests/e2e/encoding/BUILD.bazel
+++ b/tests/e2e/encoding/BUILD.bazel
@@ -19,6 +19,7 @@ iree_check_single_backend_test_suite(
     compiler_flags = [
         "--iree-global-opt-enable-early-materialization=false",
         "--iree-hip-encoding-layout-resolver=data-tiling",
+        "--iree-llvmgpu-test-combine-layout-transformation=true",
     ],
     driver = "hip",
     target_backend = "rocm",
