--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -168,11 +168,11 @@ jobs:
           - runs-on: windows-2022
             build-family: windows
             build-package: py-compiler-pkg
-            experimental: true
+            experimental: false
           - runs-on: windows-2022
             build-family: windows
             build-package: py-runtime-pkg
-            experimental: true
+            experimental: false
 
     env:
       # These are also set in: build_tools/python_deploy/build_linux_packages.sh
