[Codegen] Port AMDGPU device lib implementations to MLIR rewrites (#20598)
## Description
- Rewrites some of the `math.*` ops with MLIR pattern lowerings to
`scf`, `arith`, and core `math` ops (ex: `math.fma`).
- Compute `hasFastExp`, depending on target attribute (`isROCMBackend`)
; decides if the `FastMathPatterns` are to be used.
- Uses
[OCML](https://github.com/ROCm/llvm-project/tree/amd-staging/amd/device-libs/ocml/src)
fast math implementation for reference.
## Testing
Appended a new lit-test for erf in a new file
`compiler/src/iree/compiler/Codegen/Common/test/math_transform.mlir`,
that will `CHECK` the expected `arith/scf/math` op rewrites.

### Issue: https://github.com/iree-org/iree/issues/20213

---------

Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@Keshavs-MacBook-Air.local>
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>
Co-authored-by: Keshav Vinayak Jha <keshavvinayakjha@Keshavs-MacBook-Air.local>
Co-authored-by: Ben Vanik <ben.vanik@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -118,6 +118,7 @@ iree_compiler_cc_library(
         "EraseDeadAllocAndStores.cpp",
         "EraseHALDescriptorTypeFromMemRef.cpp",
         "ExtractAddressComputation.cpp",
+        "FastMathPatterns.cpp",
         "FissionTransferOpsInControlFlow.cpp",
         "FlattenMemRefSubspanPass.cpp",
         "FlattenMemRefs.cpp",
@@ -186,6 +187,7 @@ iree_compiler_cc_library(
         "CombineLayoutTransformation.h",
         "EncodingUtils.h",
         "ExtractAddressComputation.h",
+        "FastMathPatterns.h",
         "PassUtils.h",
         "Passes.h",
         "TensorDynamicDimAnalysis.h",
