Adding blit kernels and device-side enqueuing. (#21057)
The host may want to enqueue these as well but will use the HSA APIs
instead of directly touching queues/signals. The kernel implementations
have not been benchmarked/tuned and are just a starting point to get the
CTS to pass once the rest of the driver is implemented.

--- a/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
@@ -9,12 +9,13 @@
 #===------------------------------------------------------------------------===#
 
 set(_BITCODE_SRCS
+  "blit.c"
   "buffer.c"
-  "dummy.c"
   "tracing.c"
 )
 
 set(_BITCODE_HDRS
+  "blit.h"
   "buffer.h"
   "kernel_tables.h"
   "kernels.h"
