Adding device->host service worker. (#21094)
The worker is assigned to nodes nearby the device they are serving and
mimics an HSA/AQL queue. The intent is that HSA-specific tooling can
intercept our packets but I'm not sure there's any _good_ tooling that
does that we care about. Since the difference between an AQL queue and
what we'd do is small I decided to stick to the standard here. In the
future we can evaluate whether it makes more sense to have our own
packet format (instead of agent dispatches) or our own ringbuffers for
common operations like releasing resources or signaling semaphores from
the host.

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -34,8 +34,8 @@ iree_runtime_cc_library(
         "executable.h",
         "executable_cache.c",
         "executable_cache.h",
-        # "host_worker.c",
-        # "host_worker.h",
+        "host_service.c",
+        "host_service.h",
         "logical_device.c",
         "logical_device.h",
         "physical_device.c",
@@ -88,7 +88,7 @@ iree_runtime_cc_library(
         "event.h",
         "executable.h",
         "executable_cache.h",
-        # "host_worker.h",
+        "host_service.h",
         "logical_device.h",
         "physical_device.h",
         # "queue.h",
@@ -122,6 +122,25 @@ iree_runtime_cc_test(
         ":headers",
         "//runtime/src/iree/base",
         "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
+        "//runtime/src/iree/hal/drivers/amdgpu/util",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
+iree_runtime_cc_test(
+    name = "host_service_test",
+    srcs = ["host_service_test.cc"],
+    tags = [
+        "driver=amdgpu",
+        "nodocker",
+    ],
+    deps = [
+        ":amdgpu",
+        ":headers",
+        "//runtime/src/iree/base",
         "//runtime/src/iree/hal/drivers/amdgpu/util",
         "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
         "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
