[Codegen][GPU] Add promotion attribute for setting cache swizzling (#21105)
This adds `#iree_gpu.promote_with_cache_swizzle` to enable setting cache
swizzling when promoting operands. This attribute will forward a carried
lowering config to the inserted copy to decouple the promotion strategy
from the decision to use cache swizzling on targets that support it.

Ideally this attribute would like in the ROCM dialect, however strategy
selection is embedded too deep in iree/src/Codegen to easily define the
attribute externally. Rather than hacking in more plugin points, this
defers that decoupling to when `iree_gpu.buffer_resource_cast` gets
moved.

--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/IR/BUILD.bazel
@@ -52,6 +52,7 @@ iree_compiler_cc_library(
         "IREEGPUDialect.cpp",
         "IREEGPUInterfaces.cpp",
         "IREEGPUOps.cpp",
+        "PromotionImpls.cpp",
     ],
     hdrs = [
         "DerivedConfigUtils.h",
@@ -88,6 +89,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Codegen/Utils:VectorOpUtils",
         "//compiler/src/iree/compiler/Dialect/Encoding/Utils",
         "//compiler/src/iree/compiler/Dialect/LinalgExt/IR",
+        "//compiler/src/iree/compiler/Dialect/TensorExt/IR",
         "//compiler/src/iree/compiler/Utils",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:AMDGPUDialect",
