Adding AMDGPU command buffer implementation. (#21123)
This contains the host-side `iree_hal_amdgpu_command_buffer_t`
responsible for recording and managing the replicas of the device-side
`iree_hal_amdgpu_device_command_buffer_t` instances and the device-side
implementation for issuing and executing command buffer programs.

The comments for `iree_hal_amdgpu_device_command_buffer_t` and its
related commands document how the command buffer is represented in
device memory and what each command does. Some of the commands are not
yet wired up to host recording code as the it is skating ahead of the
HAL command buffer API. Even though unconditional branches cannot be
recorded directly they are used for segmenting large command buffers to
fit within resource limits. Conditional branches are nominally supported
but need an API (similar to indirect dispatches) to be plumbed from the
compiler to the command buffer vtable.

IREE's HAL is intended to optimize for precompiled command buffers that
can amortize the recording cost - this implementation leans that
direction and should be optimal for meaningful (non-benchmark) programs
originating from anything targeting CUDA graphs. There are some
provisions for small command buffers but the intent is that
single-command buffers end up routed towards device queue operations
much earlier.

Since the device-side queue scheduler does not yet exist the two methods
required (`iree_hal_amdgpu_device_queue_scheduler_*`) are stubbed out to
indicate where they'll be used in the future. The API may change in
subsequent changes that implement the behavior.

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -24,8 +24,8 @@ iree_runtime_cc_library(
         "buffer_pool.h",
         "channel.c",
         "channel.h",
-        # "command_buffer.c",
-        # "command_buffer.h",
+        "command_buffer.c",
+        "command_buffer.h",
         "driver.c",
         "driver.h",
         "event.c",
@@ -83,7 +83,7 @@ iree_runtime_cc_library(
         "buffer.h",
         "buffer_pool.h",
         "channel.h",
-        # "command_buffer.h",
+        "command_buffer.h",
         "driver.h",
         "event.h",
         "executable.h",
