--- a/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/device/CMakeLists.txt
@@ -11,6 +11,7 @@
 set(_BITCODE_SRCS
   "blit.c"
   "buffer.c"
+  "command_buffer.c"
   "host_client.c"
   "tracing.c"
 )
@@ -18,6 +19,7 @@ set(_BITCODE_SRCS
 set(_BITCODE_HDRS
   "blit.h"
   "buffer.h"
+  "command_buffer.h"
   "kernel_tables.h"
   "kernels.h"
   "host_client.h"
