--- a/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
@@ -24,6 +24,8 @@ iree_cc_library(
     "buffer_pool.h"
     "channel.c"
     "channel.h"
+    "command_buffer.c"
+    "command_buffer.h"
     "driver.c"
     "driver.h"
     "event.c"
@@ -68,6 +70,7 @@ iree_cc_library(
     "buffer.h"
     "buffer_pool.h"
     "channel.h"
+    "command_buffer.h"
     "driver.h"
     "event.h"
     "executable.h"
