--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
@@ -28,6 +28,7 @@ iree_lit_test_suite(
             "reshape_fusion.mlir",
             "split_reduction.mlir",
             "tiling.mlir",
+            "vectorize_iree_linalg_ext_ops.mlir",
         ],
         include = ["*.mlir"],
     ),
