[Codegen][GPU] Generalize ConcretizeMmaShapes to arbitrary inner tiles (#21142)
This pass generalizes ContretizeMmaShapes to
ExpandUndistributedInnerTiles, allowing it to work on the 32x32x64
scaled MFMA intrinsic and thus clearing the way for lowering this
operation from a packed generic.

---------

Co-authored-by: Jakub Kuderski <jakub@nod-labs.com>
Co-authored-by: Quinn Dawkins <quinn.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/BUILD.bazel
@@ -59,8 +59,8 @@ iree_compiler_cc_library(
     name = "GPUTransforms",
     srcs = [
         "CombineBarrierRegions.cpp",
-        "ConcretizeMmaShapes.cpp",
         "DistributeInnerTiledToLanes.cpp",
+        "ExpandUndistributedInnerTiles.cpp",
         "LowerIREEGPUOps.cpp",
         "Passes.cpp",
         "Transforms.cpp",
