--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/BUILD.bazel
@@ -19,8 +19,8 @@ iree_lit_test_suite(
     srcs = enforce_glob(
         [
             "combine_barrier_regions.mlir",
-            "concretize_mma_shapes.mlir",
             "distribute_inner_tiled_to_lanes.mlir",
+            "expand_undistributed_inner_tiles.mlir",
         ],
         include = ["*.mlir"],
     ),
