--- a/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/GPU/Transforms/test/CMakeLists.txt
@@ -15,8 +15,8 @@ iree_lit_test_suite(
     lit
   SRCS
     "combine_barrier_regions.mlir"
-    "concretize_mma_shapes.mlir"
     "distribute_inner_tiled_to_lanes.mlir"
+    "expand_undistributed_inner_tiles.mlir"
   TOOLS
     FileCheck
     iree-opt
