[Codegen][Tuner] expose python binding for attention op details (#21170)
This PR introduces a new Python binding `get_attention_op_detail` for
the function
`mlir::iree_compiler::IREE::LinalgExt::AttentionOpDetail::get(
QMap, KMap, VMap, OMap)`, which infers the logical structure of an
attention operation (e.g., batch/m/k1/k2/n/domain_rank) from its affine
indexing maps.
 
 This PR will enable tuner to reason about attention ops more easily.

---------

Signed-off-by: Bangtian Liu <liubangtian@gmail.com>

--- a/compiler/src/iree/compiler/API/Internal/BUILD.bazel
+++ b/compiler/src/iree/compiler/API/Internal/BUILD.bazel
@@ -139,9 +139,11 @@ iree_compiler_cc_library(
         "//compiler/bindings/c:headers",
         "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
         "//compiler/src/iree/compiler/Codegen/Utils",
+        "//compiler/src/iree/compiler/Dialect/LinalgExt/Utils",
         "@llvm-project//mlir:CAPIIR",
         "@llvm-project//mlir:CAPIIRHeaders",
         "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
     ],
 )
 
