--- a/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
+++ b/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
@@ -116,8 +116,10 @@ iree_cc_library(
     IREELLVMIncludeSetup
     MLIRCAPIIR
     MLIRIR
+    MLIRSupport
     iree::compiler::Codegen::Dialect::Codegen::IR::IREECodegenDialect
     iree::compiler::Codegen::Utils
+    iree::compiler::Dialect::LinalgExt::Utils
     iree::compiler::bindings::c::headers
   PUBLIC
 )
