[Codegen][GPU] Move LLVMGPUPrefetching pass to be invoked from only amdgpu backend (#21190)
This PR is pre-requisite to https://github.com/iree-org/iree/pull/21151.

In summary, this PR moves prefetch shared memory pass to be llvm gpu
backend pass, and invoked only when it is amdgpu backed. In order to
achieve it, I need to move all prefetch related pass to be guarded under
`forROCDL` flag and fix a bug that get uncovered in loop fission pass
from pipeline tests

Note that, I could have moved all prefetching passes in an AMDGPU folder
but then decide not too because there are plenty of target specific pass
living under `compiler/src/iree/compiler/Codegen/LLVMGPU/` directory.
Doing this consistently will require moving other passes too and
therefore deciding it is less relevant to this PR.

Special thanks to @kuhar for bringing up the concern that leads to this
PR and @Max191 to help catch a corrupted function pass manager use case
when implementing it.

---------

Signed-off-by: jerryyin <zhuoryin@amd.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
@@ -82,7 +82,6 @@ iree_cc_library(
     "LLVMGPULinkExecutables.cpp"
     "LLVMGPULowerExecutableTarget.cpp"
     "LLVMGPUPackSharedMemoryAlloc.cpp"
-    "LLVMGPUPrefetching.cpp"
     "LLVMGPUSelectLoweringStrategy.cpp"
     "LLVMGPUTensorCoreVectorization.cpp"
     "LLVMGPUTensorPad.cpp"
@@ -96,6 +95,7 @@ iree_cc_library(
     "ROCDLConfigureBufferInstructions.cpp"
     "ROCDLKernelConfig.cpp"
     "ROCDLLowerExecutableTarget.cpp"
+    "ROCDLPrefetching.cpp"
     "ROCDLSelectLoweringStrategy.cpp"
     "TestLLVMGPUQueryMMAPass.cpp"
     "Verifiers.cpp"
