--- a/tests/e2e/linalg_ext_ops/BUILD.bazel
+++ b/tests/e2e/linalg_ext_ops/BUILD.bazel
@@ -15,6 +15,7 @@ package(
 ALL_SRCS = enforce_glob(
     # keep sorted
     [
+        "arg_compare.mlir",
         "attention.mlir",
         "gather.mlir",
         "map_scatter.mlir",
@@ -65,6 +66,7 @@ iree_check_single_backend_test_suite(
 VMVX_SRCS = enforce_glob(
     # keep sorted
     [
+        "arg_compare.mlir",
         "gather.mlir",
         "map_scatter.mlir",
         "scan.mlir",
@@ -91,6 +93,7 @@ iree_check_single_backend_test_suite(
 LLVM_GPU_SRCS = enforce_glob(
     # keep sorted
     [
+        "arg_compare.mlir",
         "gather.mlir",
         "scan.mlir",
         "scatter.mlir",
@@ -126,6 +129,7 @@ iree_check_single_backend_test_suite(
 ROCM_HIP_SRCS = enforce_glob(
     # keep sorted
     [
+        "arg_compare.mlir",
         "gather.mlir",
         "map_scatter.mlir",
         "scan.mlir",
@@ -154,6 +158,7 @@ iree_check_single_backend_test_suite(
     srcs = enforce_glob(
         # keep sorted
         [
+            "arg_compare.mlir",
             "gather.mlir",
             "scan.mlir",
             "scatter.mlir",
@@ -178,6 +183,7 @@ iree_check_single_backend_test_suite(
     srcs = enforce_glob(
         # keep sorted
         [
+            "arg_compare.mlir",
             "gather.mlir",
             "scan.mlir",
             "scatter.mlir",
