--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -77,6 +77,7 @@ iree_cc_binary(
     iree::tooling::device_util
     iree::tooling::function_io
     iree::vm
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -95,6 +96,7 @@ iree_cc_binary(
     iree::tooling::device_util
     iree::tooling::function_io
     iree::vm
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -115,6 +117,7 @@ iree_cc_binary(
     iree::vm
     iree::vm::bytecode::module
   TESTONLY
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
 )
 
 iree_cc_binary(
@@ -131,6 +134,7 @@ iree_cc_binary(
     iree::io::parameter_index
     iree::io::scope_map
     iree::tooling::parameter_util
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -143,6 +147,7 @@ iree_cc_binary(
     iree::base
     iree::base::internal::cpu
     iree::schemas::cpu_data
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -160,6 +165,7 @@ iree_cc_binary(
     iree::io::parameter_index
     iree::io::scope_map
     iree::io::stream
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -175,6 +181,7 @@ iree_cc_binary(
     iree::base::internal::flatcc::parsing
     iree::schemas::instruments
     iree::schemas::instruments::dispatch_def_c_fbs
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -192,6 +199,7 @@ iree_cc_binary(
     iree::base::internal::flatcc::parsing
     iree::schemas::bytecode_module_def_c_fbs
     iree::vm::bytecode::module
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -207,6 +215,7 @@ iree_cc_binary(
     iree::io::parameter_index
     iree::io::scope_map
     iree::tooling::parameter_util
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
@@ -225,6 +234,7 @@ iree_cc_binary(
     iree::base::internal::file_io
     iree::base::internal::path
     iree::hal::local::elf::elf_module
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 endif()  # IREE_HAL_EXECUTABLE_*_EMBEDDED_ELF
@@ -241,6 +251,7 @@ iree_cc_binary(
     iree::tooling::context_util
     iree::tooling::run_module
     iree::vm
+  COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
 )
 
