Adding AMDGPU semaphore (WIP) and semaphore pool. (#21201)
The device-side semaphore will be implemented in future changes. This is
the allocation, pooling, and host-side HAL implementation of the
internal semaphore type. External semaphore types imported from platform
handles are not yet designed and are present only as a placeholder.

System info was split out from the system container to avoid pulling in
that dependency when not required. A fix to the previously unused
semaphore-failure-value-is-a-status-code helper now makes it correct and
possible to propagate iree_status_t across semaphores (no more ABORTED!
sometimes!).

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -42,10 +42,10 @@ iree_runtime_cc_library(
         "physical_device.h",
         # "queue.c",
         # "queue.h",
-        # "semaphore.c",
-        # "semaphore.h",
-        # "semaphore_pool.c",
-        # "semaphore_pool.h",
+        "semaphore.c",
+        "semaphore.h",
+        "semaphore_pool.c",
+        "semaphore_pool.h",
         "system.c",
         "system.h",
         # "trace_buffer.c",
@@ -92,8 +92,8 @@ iree_runtime_cc_library(
         "logical_device.h",
         "physical_device.h",
         # "queue.h",
-        # "semaphore.h",
-        # "semaphore_pool.h",
+        "semaphore.h",
+        "semaphore_pool.h",
         "system.h",
         # "trace_buffer.h",
     ],
@@ -141,6 +141,26 @@ iree_runtime_cc_test(
         ":amdgpu",
         ":headers",
         "//runtime/src/iree/base",
+        "//runtime/src/iree/hal/drivers/amdgpu/util",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
+iree_runtime_cc_test(
+    name = "semaphore_pool_test",
+    srcs = ["semaphore_pool_test.cc"],
+    tags = [
+        "driver=amdgpu",
+        "nodocker",
+    ],
+    deps = [
+        ":amdgpu",
+        ":headers",
+        "//runtime/src/iree/base",
+        "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
         "//runtime/src/iree/hal/drivers/amdgpu/util",
         "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
         "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
