--- a/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
@@ -92,6 +92,7 @@ iree_runtime_cc_library(
         "bitmap.c",
         "block_pool.c",
         "device_library.c",
+        "info.c",
         "kfd.c",
         "vmem.c",
     ],
@@ -100,6 +101,7 @@ iree_runtime_cc_library(
         "bitmap.h",
         "block_pool.h",
         "device_library.h",
+        "info.h",
         "kfd.h",
         "vmem.h",
     ],
