--- a/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Dialect/VectorExt/Transforms/CMakeLists.txt
@@ -23,10 +23,12 @@ iree_cc_library(
   NAME
     VectorExtTransforms
   HDRS
+    "BufferizationInterfaces.h"
     "Passes.h"
     "Passes.h.inc"
     "Transforms.h"
   SRCS
+    "BufferizationInterfaces.cpp"
     "Passes.cpp"
     "VectorExtFoldUnitExtentDims.cpp"
     "VectorizeIREEVectorExtOps.cpp"
@@ -34,6 +36,8 @@ iree_cc_library(
     ::PassesIncGen
     LLVMSupport
     MLIRArithDialect
+    MLIRBufferizationDialect
+    MLIRBufferizationTransforms
     MLIRFunctionInterfaces
     MLIRIR
     MLIRLinalgDialect
