[CodeGen] Add a pass that patches func ops for debugging purpose. (#21229)
The revision adds an option to CPU and GPU backend that can replace func
ops with external func ops in the middle of compilation.

It is a helpful feature that I found in the past debugging experience,
especially when you know some indices are off and you're struggle with
updating them in c++ code.

---------

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/test/BUILD.bazel
@@ -87,6 +87,7 @@ iree_lit_test_suite(
             "normalize_loop_bounds.mlir",
             "optimize_tensor_insert_extract_slices.mlir",
             "pad_dynamic_alloc.mlir",
+            "patch_func_ops.mlir",
             "propagate_constant_offsets.mlir",
             "propagate_dispatch_size_bounds.mlir",
             "propagate_reshapes_by_expansion.mlir",
@@ -128,6 +129,7 @@ iree_lit_test_suite(
             "batch_matmul_match_spec.mlir",
             "convolution_match_spec.mlir",
             "external_strategy_spec.mlir",
+            "patch_func_ops_spec.mlir",
             "reductions_codegen_spec.mlir",
             "reductions_match_spec.mlir",
             "tuning_spec.mlir",
@@ -141,6 +143,7 @@ iree_lit_test_suite(
         "batch_matmul_match_spec.mlir",
         "convolution_match_spec.mlir",
         "external_strategy_spec.mlir",
+        "patch_func_ops_spec.mlir",
         "reductions_codegen_spec.mlir",
         "reductions_match_spec.mlir",
         "tuning_spec.mlir",
