--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -153,6 +153,7 @@ iree_compiler_cc_library(
         "PadDynamicAlloc.cpp",
         "PassUtils.cpp",
         "Passes.cpp",
+        "PatchFuncOps.cpp",
         "PropagateConstantOffsets.cpp",
         "PropagateDispatchSizeBounds.cpp",
         "PropagateReshapesByExpansion.cpp",
